fix: Align CSS Grid for Accessories, Tops now get stored in state
There was a bug where I forgot to change the handleActive to be top1 and top2 rather than tops. It was causing errors and not rendering the image. This has been adjusted in the switch case.

CSS Grid
- Grouped the accessories together, and tops / bottoms / shoes together.
- Accessories div no longer pushes away the other block.

Next Steps:
- Figure out how to rearrange order of elements and UI when adding a second top and dress.

--- a/styles/pages/LooksBuilder.module.scss
+++ b/styles/pages/LooksBuilder.module.scss
@@ -11,6 +11,14 @@
 }
 
 .block {
+  &__main {
+    grid-column: 2 / span 2;
+
+    & > * {
+      margin-bottom: 0.5rem;
+    }
+  }
+
   &__filled {
     max-width: 100%;
     max-height: 100%;
